# cuda-stuff

buddhabrot/: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main.py  notebook.ipynb  pyproject.toml  render_config.txt  util.py
buddhabrot/include/: buddhabrot.cu  buddhabrot.hpp  complex.cu  complex.cuh
buddhabrot/include/io/: cmd.cpp  cmd.hpp  config.cpp  config.hpp  image.cpp  image.hpp
buddhabrot/include/kernels/: buddhabrot.cu  curand_utils.cu  curand_utils.cuh  importance.cu  kernels.hpp
